--- a/index.html
+++ b/index.html
@@ -18,7 +18,23 @@
     </section>
 
     <section class="produtos">
+        <div>
+            <img src="img/produto-1.jpg" alt="">
+            <p class="titulo">Disco da Xuxa</p>
+            <p>R$ 75,00</p>
+        </div>
 
+        <div>
+            <img src="img/produto-2.jpg" alt="">
+            <p class="titulo">Boneco para as crianças</p>
+            <p>R$ 155,00</p>
+        </div>
+
+        <div>
+            <img src="img/produto-3.jpg" alt="">
+            <p class="titulo">Anão de Jardim</p>
+            <p>R$ 89,00</p>
+        </div>
     </section>
 </body>
 </html>
