Adiciona produtos e footer

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
@@ -35,6 +35,28 @@
             <p class="titulo">Anão de Jardim</p>
             <p>R$ 89,00</p>
         </div>
+
+        <div>
+            <img src="img/produto-4.jpg" alt="">
+            <p class="titulo">Bonecos do Mal</p>
+            <p>R$ 439,00</p>
+        </div>
+
+        <div>
+            <img src="img/produto-5.jpg" alt="">
+            <p class="titulo">Chinelo Assassino</p>
+            <p>R$ 51,00</p>
+        </div>
+
+        <div>
+            <img src="img/produto-6.jpg" alt="">
+            <p class="titulo">Espada Embelezadora</p>
+            <p>R$ 621,00</p>
+        </div>
     </section>
+
+    <footer>
+        Maldita Company 2017
+    </footer>
 </body>
 </html>
